# rust-nightly-template

./: Cargo.toml  PKGBUILD  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
