[package]
name = "template"
version = "0.0.1"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/template"
description = "Rust nightly template x86_64-unknown-linux-musl"
edition = "2021"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "symbols"
debug  = false
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 0
