cargo-features = ["panic-immediate-abort"]

[package]
name = "template"
version = "0.0.2"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/template"
description = "Rust nightly template x86_64-unknown-linux-musl"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
debug  = false
codegen-units = 1
panic = "immediate-abort"

[profile.dev]
opt-level = 0
